fuel-indexer-macros/test_data/fail_args.stderr
error: abi specification is required in indexer definition!
 --> test_data/fail_args.rs:3:1
  |
3 | #[indexer()]
  | ^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `indexer` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
  --> test_data/fail_args.rs:18:2
   |
18 | }
   |  ^ consider adding a `main` function to `$DIR/test_data/fail_args.rs`
